# Gringofts

./: .codecov.yml  .gitignore  .gitmodules  ACKNOWLEDGEMENTS.md  CMakeLists.txt  CONTRIBUTORS.md  CPPLINT.cfg  LICENSE.md  README.md  codecov.yml  conf
server/src/kv-engine/: CMakeLists.txt  KVEngine.cpp  KVEngine.h  KVEngineImpl.cpp  KVEngineImpl.h  KVWatch.h  types.h
server/src/kv-engine/execution/: CMakeLists.txt  CommandProcessor.cpp  CommandProcessor.h  EventApplyLoop.cpp  EventApplyLoop.h  ExecutionService.h  ExecutionServiceImpl.h  Loop.cpp  Loop.h  QueueWorker.h
server/src/kv-engine/model/: CMakeLists.txt  Command.h  ConnectCommand.cpp  ConnectCommand.h  Event.cpp  Event.h  KVDeleteCommand.cpp  KVDeleteCommand.h  KVEvictCommand.cpp  KVEvictCommand.h  KVGenerateCommand.cpp  KVGenerateCommand.h  KVGetCommand.cpp  KVGetCommand.h  KVImportCommand.cpp  KVImportCommand.h  KVPutCommand.cpp  KVPutCommand.h  KVTransCommand.cpp  KVTransCommand.h
server/src/kv-engine/raft/: CMakeLists.txt  RaftEventStore.cpp  RaftEventStore.h  ReplyLoop.cpp  ReplyLoop.h
server/src/kv-engine/store/: CMakeLists.txt  ConcurInMemoryKVStore.cpp  ConcurInMemoryKVStore.h  InMemoryKVStore.cpp  InMemoryKVStore.h  Iterator.h  KVObserver.h  KVStore.h  ProxyKVStore.h  ReadOnlyKVStore.h  RocksDBKVStore.cpp  RocksDBKVStore.h  SnapshottedKVStore.h  TemporalKVStore.cpp  TemporalKVStore.h  VersionStore.cpp  VersionStore.h  WSConcurInMemoryKVStore.cpp  WSConcurInMemoryKVStore.h  WriteOnlyKVStore.h
server/src/kv-engine/strategy/: CMakeLists.txt  CacheEviction.cpp  CacheEviction.h
server/src/kv-engine/utils/: AppUtil.h  CMakeLists.txt  Status.h  StrUtil.h  TPRegistryEx.h  TimeUtil.h
src/app_demo/: AppStateMachine.cpp  AppStateMachine.h  CMakeLists.txt  CPPLINT.cfg
src/app_demo/execution/: IncreaseApplier.cpp  IncreaseApplier.h  IncreaseHandler.cpp  IncreaseHandler.h
src/app_demo/should_be_generated/app/: App.cpp  App.h  Main.cpp  RequestCallData.cpp  RequestCallData.h  RequestForward.h  RequestReceiver.cpp  RequestReceiver.h
src/app_demo/should_be_generated/domain/: AppStateMachine_internal.cpp  AppStateMachine_internal.h  CommandDecoderImpl.cpp  CommandDecoderImpl.h  CommandProcessLoop.h  CommandProcessLoop.hpp  EventApplyLoop.h  EventDecoderImpl.cpp  EventDecoderImpl.h  IncreaseCommand.cpp  IncreaseCommand.h  ProcessedEvent.cpp  ProcessedEvent.h  common_types.h
src/app_demo/v1/: AppStateMachine.cpp  AppStateMachine.h
src/app_demo/v2/: AppStateMachine.h  MemoryBackedAppStateMachine.h  RocksDBBackedAppStateMachine.cpp  RocksDBBackedAppStateMachine.h
src/app_util/: AppInfo.cpp  AppInfo.h  AppStateMachine.h  CMakeLists.txt  CommandEventDecoderImpl.h  CommandProcessLoop.h  EventApplyLoop.h  MultiRequestReceiver.h  NetAdminServer.h  NetAdminServiceProvider.h  RequestCallData.h  RequestReceiver.h  Service.h  app.sql
src/app_util/control/: CtrlCommandEvent.h  CtrlDecoder.h  CtrlReceiver.cpp  CtrlReceiver.h  CtrlState.cpp  CtrlState.h  Route.cpp  Route.h
src/app_util/control/reconfigure/: ReconfigureCommand.cpp  ReconfigureCommand.h  ReconfigureEvent.cpp  ReconfigureEvent.h
src/app_util/control/split/: ScaleReceiver.cpp  ScaleReceiver.h  SplitCommand.cpp  SplitCommand.h  SplitEvent.cpp  SplitEvent.h
src/app_util/protos/: ctrl.proto  netadmin.proto  route.proto  scale.proto  split.proto
src/app_util/split/: RequestCallData.cpp  RequestCallData.h  RequestReceiver.cpp  RequestReceiver.h  SplitCommand.cpp  SplitCommand.h  SplitEvent.cpp  SplitEvent.h  SplitManager.cpp  SplitManager.h
src/app_util/sync/: LogReader.cpp  LogReader.h  LogSyncService.cpp  LogSyncService.h
src/infra/: CMakeLists.txt  Decodable.h  Encodable.h  common_types.h
src/infra/es/: Command.h  CommandDecoder.h  CommandEventDecoder.h  CommandEventStore.h  CommandMetaData.h  Crypto.h  Event.h  EventDecoder.h  EventMetaData.h  Loop.h  MetaData.h  ProcessCommandStateMachine.h  ReadonlyCommandEventStore.h  Recoverable.h  StateMachine.h
src/infra/es/store/: CPPLINT.cfg  CommandEventDecodeWrapper.h  CommandEventEncodeWrapper.h  DefaultCommandEventStore.h  RaftCommandEventStore.cpp  RaftCommandEventStore.h  ReadonlyDefaultCommandEventStore.h  (+10 more)
src/infra/forward/: ForwardBase.h  ForwardClient.h  ForwardCore.h  ForwardSignal.h
src/infra/grpc/: RequestHandle.h
src/infra/monitor/: MonitorCenter.cpp  MonitorCenter.h  MonitorTypes.h  Monitorable.h
src/infra/mpscqueue/: MpscDoubleBufferQueue.cpp  MpscDoubleBufferQueue.h  MpscQueue.h
src/infra/raft/: CMakeLists.txt  DoubleBuffer.h  RaftBuilder.h  RaftConstants.h  RaftInterface.h  RaftLogStore.cpp  RaftLogStore.h  RaftMain.cpp  RaftReplyLoop.cpp  RaftReplyLoop.h  RaftSignal.h  StorageMain.cpp  StreamingService.cpp  StreamingService.h  raft.proto  streaming.proto
src/infra/sidecar/: Sidecar.cpp  interop.proto
src/infra/util/: BigDecimal.cpp  BigDecimal.h  Cluster.cpp  Cluster.h  ClusterInfo.cpp  ClusterInfo.h  CryptoUtil.cpp  CryptoUtil.h  DNSResolver.h  FileSecretKey.cpp  FileSecretKey.h  FileUtil.cpp  FileUtil.h  HttpCode.h  IdGenerator.cpp  IdGenerator.h  KVClient.cpp  KVClient.h  MemoryPool.cpp  MemoryPool.h  MetricReporter.h  PMRContainerFactory.h  PerfConfig.cpp  PerfConfig.h  PodUtil.h  RaftClusterResolver.h  RandomUtil.h  SecretKey.h  SecretKeyFactory.cpp  SecretKeyFactory.h  Signal.cpp  Signal.h  StrUtil.h  TessDNSResolver.h  TestPointProcessor.h  TimeUtil.h  TlsUtil.cpp  TlsUtil.h  TrackingMemoryResource.cpp  TrackingMemoryResource.h  (+1 more)
test/: CMakeLists.txt  TestRunner.cc
test/infra/es/: CommandEventStoreTest.cpp  CommandMetaDataTest.cpp  CommandTest.cpp  Dummies.h  EventTest.cpp  LoopTest.cpp  ReadonlyCommandEventStoreMock.h  ReadonlyCommandEventStoreTest.cpp
test/infra/grpc/: RequestHandleTest.cpp
test/infra/monitor/: MonitorCenterTest.cpp
test/infra/mpscqueue/: MpscDoubleBufferQueueTest.cpp
test/infra/util/: BigDecimalTest.cpp  ClusterInfoTest.cpp  CryptoUtilTest.cpp  FileUtilTest.cpp  IdGeneratorTest.cpp  RandomUtilTest.cpp  SignalTest.cpp  TimeUtilTest.cpp  TlsUtilTest.cpp  UtilTest.cpp
test/test_util/: SyncPointProcessor.cpp  SyncPointProcessor.h
(+132 files in other folders)
